update evaluating a collection

--- a/about.html
+++ b/about.html
@@ -26,77 +26,84 @@
         </nav>
     </header>
     <div class="container">
-    <main>
-        <section>
-            <h2>Welcome to our local Stamp Club</h2>
-            <p>The Fraser Valley Philatelic Club has been a cornerstone of the local philatelic community for 50 years,
-                fostering an appreciation for stamp collecting and postal history among enthusiasts of all ages.</p>
-        </section>
-        <section>
-            <h2>Our History</h2>
-            <p>The Fraser Valley Philatelic (stamp) Club had its origins in the early 1960's. The meetings originally
-                occurred once a month either in Chilliwack, Abbotsford or Mission. In the 1980s the club began holding
-                all of its monthly meetings in Abbotsford, since most of the membership lived in that vicinity. At its
-                peak, the club was the largest stamp club west of Edmonton with approximately 100 members, with a
-                monthly turn out of 50-60 members.</p>
+        <main>
+            <section>
+                <h2>Welcome to our local Stamp Club</h2>
+                <p>The Fraser Valley Philatelic Club has been a cornerstone of the local philatelic community for 50
+                    years,
+                    fostering an appreciation for stamp collecting and postal history among enthusiasts of all ages.</p>
+            </section>
+            <section>
+                <h2>Our History</h2>
+                <p>The Fraser Valley Philatelic (stamp) Club had its origins in the early 1960's. The meetings
+                    originally
+                    occurred once a month either in Chilliwack, Abbotsford or Mission. In the 1980s the club began
+                    holding
+                    all of its monthly meetings in Abbotsford, since most of the membership lived in that vicinity. At
+                    its
+                    peak, the club was the largest stamp club west of Edmonton with approximately 100 members, with a
+                    monthly turn out of 50-60 members.</p>
 
                 <p>The meetings now have 25-35 people. Even though the membership is receding there is still an
-                enthusiastic group that may be able to assist any aspiring collectors or assist in disposing of
-                collections long neglected or inherited.</p>
-        </section>
-        <section>
-            <h2>Our Mission</h2>
-            <p>To promote the study of philately, support the preservation of philatelic materials, and provide a
-                community for collectors to share their passion and knowledge.</p>
-        </section>
-        <section>
-            <h2>Leadership</h2>
-            <div class="leadership-profiles">
-                <div>
-                    <img src="./images/sam.png" alt="President Sam Vandermeulen">
-                    <p><strong>Sam Vandermeulen, President</strong></p>
-                    <p>Leading our club with dedication and vision.</p>
+                    enthusiastic group that may be able to assist any aspiring collectors or assist in disposing of
+                    collections long neglected or inherited.</p>
+            </section>
+            <section>
+                <h2>Our Mission</h2>
+                <p>To promote the study of philately, support the preservation of philatelic materials, and provide a
+                    community for collectors to share their passion and knowledge.</p>
+            </section>
+            <section>
+                <h2>Leadership</h2>
+                <div class="leadership-profiles">
+                    <div>
+                        <img src="./images/sam.png" alt="President Sam Vandermeulen">
+                        <p class="no-margin"><strong>Sam Vandermeulen, President</strong></p>
+                        <p class="no-margin">Leading our club with dedication and vision.</p>
+                    </div>
+                    <p></p>
+                    <div>
+                        <img src="./images/manny.png" alt="Vice President Manny Brautigam">
+                        <p class="no-margin"><strong>Manny Brautigam, Vice President</strong></p>
+                        <p class="no-margin">Providing support and innovative ideas for club growth.</p>
+                    </div>
+                    <p></p>
+                    <div>
+                        <img src="./images/randy.png" alt="Secretary Randy Todd">
+                        <p class="no-margin"><strong>Randy Todd, Secretary</strong></p>
+                        <p class="no-margin">Ensuring our operations run smoothly and efficiently.</p>
+                    </div>
+                    <p></p>
+                    <div>
+                        <img src="./images/doreen.png" alt="Treasurer Doreen McMillan">
+                        <p class="no-margin"><strong>Doreen McMillan, Treasurer</strong></p>
+                        <p>Managing financial affairs with integrity and precision.</p>
+                    </div>
                 </div>
-                <div>
-                    <img src="./images/manny.png" alt="Vice President Manny Brautigam">
-                    <p><strong>Manny Brautigam, Vice President</strong></p>
-                    <p>Providing support and innovative ideas for club growth.</p>
-                </div>
-                <div>
-                    <img src="./images/randy.png" alt="Secretary Randy Todd">
-                    <p><strong>Randy Todd, Secretary</strong></p>
-                    <p>Ensuring our operations run smoothly and efficiently.</p>
-                </div>
-                <div>
-                    <img src="./images/doreen.png" alt="Treasurer Doreen McMillan">
-                    <p><strong>Doreen McMillan, Treasurer</strong></p>
-                    <p>Managing financial affairs with integrity and precision.</p>
-                </div>
-            </div>
-        </section>
-        <section>
-            <h2>Collection Advice & Assessment on Disposal</h2>
-            <ol class="custom-numbering">
-                <li>Who is the owner of this collection?</li>
-                <li>Has the collection ever been bequeathed to any family member in a will or spousal agreement? If so,
-                    provide names and contact information.</li>
-                <li>Has the collection ever been appraised or insured? If so, is there any documentation, receipts,
-                    appraisal info.</li>
-                <li>Major collection [high value] or single high value items can trigger a Capital Gains situation.</li>
-                <li>Join a club</li>
-                <li>Pass on to Family or friends</li>
-                <li>Donate to a worthy cause of his or her choice</li>
-                <li>Sell to Dealer</li>
-                <li>Place on an auction site, i.e., Ebay</li>
-                <li>Place on a dealer's auction site</li>
-                <li>Donate to a local Philatelic club</li>
-                <li>Sell to a local Philatelic club</li>
-            </ol>
-        </section>
-    </main>
-</div>
+            </section>
+            <section>
+                <h2>EVALUATING A STAMP COLLECTION</h2>
+                <p>Stamp collections can be quite different in terms of value. Collections can range from extensive and
+                    valuable to a kid’s collection (of little value and collected for fun). To dispose of a collection
+                    it may be best to determine the worth of the material, and how it was originally obtained: such as
+                    purchases from dealers or post offices, an inheritance from a family member, or as a gift from
+                    neighbours and/or friends. Formal appraisals usually are only needed for better collections and can
+                    be quite expensive. For a free appraisal you might consider obtaining advice from a local stamp
+                    club. They will be able to suggest options for your particular collection including:</p>
+                <ul class="indented-list">
+                    <li>Private sale</li>
+                    <li>Sell through auction sites for better material (usually a 25-30% fee).</li>
+                    <li>Donation to a local charity or local stamp club.</li>
+                    <li>Gift to a collector in the family, such as a child or grandchild.</li>
+                    <li>Sell directly to a dealer</li>
+                </ul>
+                <p></p>
+                <p>The Fraser Valley Stamp Club can give a free, quick appraisal and may provide some recommendations.
+                    Call Sam at 604-853-6782 or Randy at 604-751-0554</p>
+            </section>
+        </main>
+    </div>
     <footer>
-        <p>© 2024 Fraser Valley Philatelic Club. All rights reserved.</p>
     </footer>
 
 </body>
