--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Fraser Valley Philatelic Society</title>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header class="bg-primary text-white text-center py-3">
-            <h1>Welcome to the Fraser Valley Philatelic Club</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="meetings.html">Meetings</a></li>
-                    <li><a href="membership.html">Membership</a></li>
-                    <li><a href="links.html">Links</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main class="container text-center mt-5">
-            <p>Explore the history and beauty of philately with us!</p>
-            <div>
-                <img src="./images/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢ stamp" class="img-fluid">
-                <!-- <img src="./images/Benjamin_Franklin2_1895_Issue-1c.jpg" alt="Benjamin Franklin 1¢, 1895 Issue" class="img-fluid">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Join the Fraser Valley Philatelic Club to explore stamp collecting and trading activities in the Fraser Valley. Discover rare stamps, meet fellow collectors, and enhance your collection.">
+    <title>Fraser Valley Philatelic Society</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header class="bg-primary text-white text-center py-3">
+        <h1>Welcome to the Fraser Valley Philatelic Club</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="meetings.html">Meetings</a></li>
+                <li><a href="membership.html">Membership</a></li>
+                <li><a href="links.html">Links</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="index-container text-center mt-5">
+        <p>Explore the history and beauty of philately with us!</p>
+        <div>
+            <img src="./images/Canada_bluenose_1928_issue-50c.jpg" alt="Canada Bluenose 50¢ stamp" class="img-fluid">
+            <!-- <img src="./images/Benjamin_Franklin2_1895_Issue-1c.jpg" alt="Benjamin Franklin 1¢, 1895 Issue" class="img-fluid">
                 <img src="./images/Hindenburg_Olympiafahrt_1936.jpg" alt="Hindenburg Olympiafahrt, 1936" class="img-fluid">
                 <img src="./images/3_pence_beaver_stamp.jpg" alt="3_pence_beaver_stamp" class="img-fluid">
                 <img src="./images/Penny_black.jpg  " alt="Penny_black" class="img-fluid">
@@ -34,9 +40,10 @@
                 <img src="./images/China_Sputnik_4fen_stamp_in_1958.jpg" alt="China_Sputnik_4fen_stamp_in_1958" class="img-fluid">
                 <img src="./images/Zinnoberroter_Merkur.jpg" alt="Zinnoberroter_Merkur" class="img-fluid">
                 <img src="./images/POSTE-1892-1.png" alt="France 1892" class="img-fluid"> -->
-            </div>
-        </main>
-        <footer class="bg-dark text-white text-center p-3">
-        </footer>
-    </body>
+        </div>
+    </main>
+    <footer class="bg-dark text-white text-center p-3">
+    </footer>
+</body>
+
 </html>
