--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Join the Fraser Valley Philatelic Club to explore stamp collecting and trading activities in the Fraser Valley. Discover rare stamps, meet fellow collectors, and enhance your collection.">
-    <title>Fraser Valley Philatelic Society</title>
+        content="Discover the Fraser Valley Stamp Club, your local hub for stamp collecting and trading. 
+        Join us to find rare stamps, connect with fellow collectors, and enhance your collection">
+    <title>Fraser Valley Stamp Club | Stamp Collecting and Trading Club | Philatelic</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
         rel="stylesheet">
@@ -16,7 +17,7 @@
 
 <body>
     <header class="bg-primary text-white text-center py-3">
-        <h1>Welcome to the Fraser Valley Philatelic Club</h1>
+        <h1>Welcome to the Fraser Valley Stamp Club</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -41,6 +42,15 @@
                 <img src="./images/Zinnoberroter_Merkur.jpg" alt="Zinnoberroter_Merkur" class="img-fluid">
                 <img src="./images/POSTE-1892-1.png" alt="France 1892" class="img-fluid"> -->
         </div>
+        <p></p>
+        <section>
+            <h2>About Our Philatelic Society</h2>
+            <p>Explore the rich history and beauty of philately with the Fraser Valley Stamp Club. Our club offers opportunities for stamp collecting, trading, and learning about rare stamps.</p>
+        </section>
+        <section>
+            <h2>Upcoming Philatelic Events</h2>
+            <p>Join us for our <a href="events.html">upcoming events</a> where you can meet fellow stamp collectors and participate in trading activities.</p>
+        </section>
     </main>
     <footer class="bg-dark text-white text-center p-3">
     </footer>
