--- a/events.html
+++ b/events.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events - Fraser Valley Philatelic Club</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="description"
+        content="Join the Fraser Valley Stamp Club for stamp collecting and trading activities. Discover rare stamps and connect with fellow philatelists in Fraser Valley.">
+    <meta name="keywords"
+        content="Fraser Valley stamp club, stamp collecting, stamp trading, rare stamps, philatelic society, philately events, Fraser Valley philatelists">
+    <title>Events - Fraser Valley Stamp Collectors Club | Stamp Collecting & Trading Events</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Events at Fraser Valley Philatelic Club</h1>
@@ -22,33 +30,38 @@
         </nav>
     </header>
     <div class="container">
-    <main>
-        <section class="event">
-            <h2>Abbotsford Matsqui Philatelic Exposition 2024</h2>
-            <p><strong>Date:</strong> April 21st, 2024</p>
-            <p><strong>Location:</strong> Mouat School Cafeteria</p>
-            <p>An exhibition showcasing rare and historical stamps from around the world. Special auctions and prizes.</p>
-        </section>
-        <section class="event">
-            <h2>The Vancouver Coins, Stamps & Collectables Show 2024</h2>
-            <p><strong>Location:</strong> Nikkei National Museum & Cultural Centre, 6688 Southoaks Crescent, Burnaby</p>
-            <p>This show will feature 40 tables of coins, stamps, and collectables. Buy, sell, or trade items such as Canadian coins, world coins, ancient coins, stamps, art, covers, postcards, medals, tokens, bank notes, and more. Free coins for kids and free appraisals are available.</p>
-            <strong>Dates:</strong>
-            <ul class="indented-list">
-                <li>June 1st, 2024</li>
-                <li>September 21st, 2024</li>
-                <li>November 23rd, 2024</li>
-            </ul>
-            <p></p>
-            <p><strong>Hours:</strong> Saturdays, 9:30 am - 3:30 pm</p>
-            <p><strong>Admission:</strong> $3 per person (under age 16 FREE)</p>
-            <p>Note: The show will adhere to all COVID-19 rules and restrictions as prescribed by Federal and Provincial authorities. Please stay home if you are not feeling well.</p>
-        </section>
-    </main>
-</div>
+        <main>
+            <section class="event">
+                <h2>Next Club Meeting</h2>
+                <p><strong>Date:</strong> Seeptember 10, 2024</p>
+                <p><strong>Location:</strong> Chances's Casino, Abbotsford</p>
+                <p>Starts at 6:30. Usual Meeting.</p>
+            </section>
+            <section class="event">
+                <h2>The Vancouver Coins, Stamps & Collectables Show 2024</h2>
+                <p><strong>Location:</strong> Nikkei National Museum & Cultural Centre, 6688 Southoaks Crescent, Burnaby
+                </p>
+                <p>This show will feature 40 tables of coins, stamps, and collectables. Buy, sell, or trade items such
+                    as Canadian coins, world coins, ancient coins, stamps, art, covers, postcards, medals, tokens, bank
+                    notes, and more. Free coins for kids and free appraisals are available.</p>
+                <strong>Dates:</strong>
+                <ul class="indented-list">
+                    <li>June 1st, 2024</li>
+                    <li>September 21st, 2024</li>
+                    <li>November 23rd, 2024</li>
+                </ul>
+                <p></p>
+                <p><strong>Hours:</strong> Saturdays, 9:30 am - 3:30 pm</p>
+                <p><strong>Admission:</strong> $3 per person (under age 16 FREE)</p>
+                <p>Note: The show will adhere to all COVID-19 rules and restrictions as prescribed by Federal and
+                    Provincial authorities. Please stay home if you are not feeling well.</p>
+            </section>
+        </main>
+    </div>
     <footer>
         <p>© 2024 Fraser Valley Philatelic Society. All rights reserved.</p>
     </footer>
     <script src="scripts.js"></script>
 </body>
+
 </html>
