--- a/events.html
+++ b/events.html
@@ -33,7 +33,7 @@
         <main>
             <section class="event">
                 <h2>Next Club Meeting</h2>
-                <p><strong>Date:</strong> Seeptember 10, 2024</p>
+                <p><strong>Date:</strong> September 10, 2024</p>
                 <p><strong>Location:</strong> Chances's Casino, Abbotsford</p>
                 <p>Starts at 6:30. Usual Meeting.</p>
             </section>
