corret meetings and events

--- a/meetings.html
+++ b/meetings.html
@@ -22,14 +22,17 @@
         </nav>
     </header>
     <main class="container">
+        <section class="event">
+            <h2>Next Club Meeting</h2>
+            <p><strong>Date:</strong> October 8, 2024 </p>
+            <p><strong>Location:</strong> Maout High School Library, Abbotsford</p>
+            <p>Starts at 6:30. Usual Meeting.</p>
+        </section>
         <section>
             <h2>Regular Meetings</h2>
             <p>The Fraser Valley Philatelic Club meets typically on the second Tuesday of each month, except July and August, at 6:00 PM in the school library at W.J. Mouat Secondary School, 32355 Mouat Drive, Abbotsford, BC.</p>
             <h3>Upcoming Meeting Dates</h3>
             <ul class="indented-list">
-                <li>May 7, 2024 - Tuesday</li>
-                <li>June 11, 2024 - Tuesday</li>
-                <li>September 10, 2024 - Tuesday</li>
                 <li>October 8, 2024 - Tuesday</li>
                 <li>November 12, 2024 - Tuesday</li>
                 <li>December 10, 2024 - Tuesday</li>
