corret meetings and events

--- a/meetings.html
+++ b/meetings.html
@@ -25,7 +25,7 @@
         <section class="event">
             <h2>Next Club Meeting</h2>
             <p><strong>Date:</strong> October 8, 2024 </p>
-            <p><strong>Location:</strong> Maout High School Library, Abbotsford</p>
+            <p><strong>Location:</strong> W.J. Mouat Secondary School, 32355 Mouat Drive, Abbotsford, BC.</p>
             <p>Starts at 6:30. Usual Meeting.</p>
         </section>
         <section>
