corret meetings and events

--- a/meetings.html
+++ b/meetings.html
@@ -30,9 +30,11 @@
         </section>
         <section>
             <h2>Regular Meetings</h2>
-            <p>The Fraser Valley Philatelic Club meets typically on the second Tuesday of each month, 
+            <p style="margin-left: 50px; margin-right: 50px;">
+                The Fraser Valley Philatelic Club meets typically on the second Tuesday of each month, 
                 except July and August, at 6:00 PM in the school library at W.J. 
-                Mouat Secondary School, 32355 Mouat Drive, Abbotsford, BC.</p>
+                Mouat Secondary School, 32355 Mouat Drive, Abbotsford, BC.
+            </p>
             <h3>Upcoming Meeting Dates</h3>
             <ul class="indented-list">
                 <li>October 8, 2024 - Tuesday</li>
