--- a/meetings.html
+++ b/meetings.html
@@ -24,9 +24,11 @@
     <main class="container">
         <section class="event">
             <h2>Next Club Meeting</h2>
+            <p style="margin-left: 50px; margin-right: 50px;">
             <p><strong>Date:</strong> September 10, 2024 </p>
-            <p><strong>Location:</strong> W.J. Mouat Secondary School, 32355 Mouat Drive, Abbotsford, BC.</p>
-            <p>Starts at 6:30. Usual Meeting.</p>
+            <p><strong>Location:</strong> Chances Casino 30835 Peardonville Road, Abbotsford, BC.</p>
+            <p>Starts at 6:00. Usual Meeting.</p>
+            <p>
         </section>
         <section>
             <h2>Regular Meetings</h2>
