--- a/meetings.html
+++ b/meetings.html
@@ -47,6 +47,10 @@
                 <li>March 11, 2025 - Tuesday</li>
                 <li>April 8, 2025 - Tuesday</li>
                 <li>April ?, 2025 - AMPEX 2025 - to be determined</li>
+                <li>May 13,2025 - Tuesday</li>
+                <li>June 10, 2025 - Tuesday</li>
+                <li>July - No meeting</li>
+                <li>August - No meeting</li>
             </ul>
             <br>
             <p>At each meeting, there is active trading as well as a silent auction and a buy board with lots submitted by members. 
