--- a/events.html
+++ b/events.html
@@ -40,7 +40,14 @@
                     notes, and more. Free coins for kids and free appraisals are available.</p>
                 <strong>Dates:</strong>
                 <ul class="indented-list">
-                    <li>November 23rd, 2024</li>
+                    <li>The last show for 2024 is on Saturday, November 23, 2024</li>
+                </ul>
+                <strong>Here are the show dates for 2025:</strong>
+                <ul class="indented-list">
+                    <li>Saturday, February 22, 2025</li>
+                    <li>Saturday, May 10, 2025</li>
+                    <li>Saturday, September 13, 2025</li>
+                    <li>Saturday, November 22, 2025</li>
                 </ul>
                 <p></p>
                 <p><strong>Hours:</strong> Saturdays, 9:30 am - 3:30 pm</p>
