update event to include ampex25

--- a/events.html
+++ b/events.html
@@ -32,29 +32,39 @@
     <div class="container">
         <main>
             <section class="event">
-                <h2>The Vancouver Coins, Stamps & Collectables Show 2024</h2>
+                <h2>AMPEX 2025</h2>
+                <p><strong>Location:</strong> W.J.Mouat Senior Secondary (cafeteria)<br>
+                32355 Mouat Drive<br>
+                Abbotsford, B.C.</p>
+                <p><strong>Date:</strong> April 12, 2025</p>
+                <p><strong>Time:</strong> 9:30am - 2:30pm</p>
+                <p><strong>Features:</strong></p>
+                <ul class="indented-list">
+                    <li>Free admission and free parking</li>
+                    <li>Ten plus dealers with bid board and door prizes</li>
+                    <li>Free advice on dealing with inherited collections</li>
+                </ul>
+                <p><strong>Contact:</strong> Randy Todd<br>
+                Email: randalltodd755@gmail.com</p>
+            </section>
+
+            <section class="event">
+                <h2>The Vancouver Coins, Stamps & Collectables Show 2025</h2>
                 <p><strong>Location:</strong> Nikkei National Museum & Cultural Centre, 6688 Southoaks Crescent, Burnaby
                 </p>
                 <p>This show will feature 40 tables of coins, stamps, and collectables. Buy, sell, or trade items such
                     as Canadian coins, world coins, ancient coins, stamps, art, covers, postcards, medals, tokens, bank
                     notes, and more. Free coins for kids and free appraisals are available.</p>
-                <strong>Dates:</strong>
-                <ul class="indented-list">
-                    <li>The last show for 2024 is on Saturday, November 23, 2024</li>
-                </ul>
-                <p></p>
-                <strong>Here are the show dates for 2025:</strong>
+                <p><strong>Show Dates for 2025:</strong></p>
                 <ul class="indented-list">
                     <li>Saturday, February 22, 2025</li>
                     <li>Saturday, May 10, 2025</li>
                     <li>Saturday, September 13, 2025</li>
                     <li>Saturday, November 22, 2025</li>
                 </ul>
-                <p></p>
                 <p><strong>Hours:</strong> Saturdays, 9:30 am - 3:30 pm</p>
                 <p><strong>Admission:</strong> $3 per person (under age 16 FREE)</p>
-                <p>Note: The show will adhere to all COVID-19 rules and restrictions as prescribed by Federal and
-                    Provincial authorities. Please stay home if you are not feeling well.</p>
+                <p>Note: The show will adhere to all COVID-19 rules and restrictions as prescribed by Federal and Provincial authorities. Please stay home if you are not feeling well.</p>
             </section>            
         </main>
     </div>
