--- a/meetings.html
+++ b/meetings.html
@@ -38,7 +38,7 @@
                 <li>February 11, 2025 - Tuesday</li>
                 <li>March 11, 2025 - Tuesday</li>
                 <li>April 8, 2025 - Tuesday</li>
-                <li>April ?, 2025 - AMPEX 2025 - to be determined</li>
+                <li>April 12, 2025 - AMPEX 2025</li>
                 <li>May 13,2025 - Tuesday</li>
                 <li>June 10, 2025 - Tuesday</li>
                 <li>July - No meeting</li>
